# test-malloc

./: CMakeLists.txt  main.cc  test.sh
